--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
 
 /* Smooth Scroll */
 html{
+  background-color: #90d5ec;
+  background-image: linear-gradient(315deg, #90d5ec 0%, #fc575e 74%);
   scroll-behavior: smooth;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
